--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Welcome to my channel LGTICW.. This is POC for CI-CD using AWS module.
+Workspace of indiqube.. This is POC for CI-CD using AWS module.
